tests/baselines/reference/for-inStatementsDestructuring6(target=esnext).errors.txt
for-inStatementsDestructuring6.ts(5,7): error TS2322: Type 'string' is not assignable to type 'number'.


==== for-inStatementsDestructuring6.ts (1 errors) ====
    let b: number;
    let c: string[];
    declare let obj: { [s: string]: string };
    
    for ([b, ...c] in obj) {}
          ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    